--- a/src/pages/Initial/index.css
+++ b/src/pages/Initial/index.css
@@ -80,3 +80,44 @@ body::-webkit-scrollbar {
     border-left-width: 0;
     margin-top: 205px;     
 }
+
+@media only screen  and (max-width: 1560px){
+    .image-container{
+        margin-left: 40.9%;
+        margin-top: -28.1rem;
+    }
+    .image{
+        width: 800px;
+        height: 800px;
+    }
+    .border-div{
+        margin-top: 72px;     
+    }
+    .Title{
+        font-size: 100px;
+    }
+    .Apresentation{
+        font-size: 30px;
+        width: 500px;
+    }
+}
+@media only screen  and (max-width: 1360px){
+    .image-container{
+        margin-left: 38.7%;
+        margin-top: -28.1rem;
+    }
+    .image{
+        width: 800px;
+        height: 800px;
+    }
+    .border-div{
+        margin-top: 72px;     
+    }
+    .Title{
+        font-size: 95px;
+    }
+    .Apresentation{
+        font-size: 30px;
+        width: 490px;
+    }
+}
