--- a/src/pages/Registration/index.css
+++ b/src/pages/Registration/index.css
@@ -1,7 +1,7 @@
 body{
     background-color: #FFFFFF;
 }
-.border-page{
+.border-page-image{
     position: fixed;
     margin: -1px;
 }
@@ -12,15 +12,14 @@ body{
     margin-top: 190px;
     left: 50%;
 }
-.image-logo{
+.image-logo-create{
     position: absolute;
     width: 74.67px;
     height: 73.69px;
-    margin: 215px;
-    margin-top: 130px;
-    left: 50%;
+    margin: 105px;
+    margin-top: -40px;
 }
-.title{
+.title-create{
     position: absolute;
     width: 288px;
     height: 46px;
@@ -36,12 +35,12 @@ body{
 
     color: #737373;
 }
-form {
+.create-account form {
 	position: relative;
     margin-top: 120px;
     margin-left: -70px;
 }
-input{
+.create-account input {
     display: flex;
     background: #F8F8F8;
     mix-blend-mode: darken;
@@ -59,7 +58,12 @@ input{
 	font-size: 18px;
 	color: black;	
 }
-.btn{
+.btn-create{
     margin-top: 40px;
     margin-left: 30px;
+}
+@media only screen  and (max-width: 1560px){
+    .create-account{
+        margin: 150px;
+    }
 }
