--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,12 +1,10 @@
 .header{
     position: absolute;
-    width: 93.03px;
-    height: 1919.07px;
-
+    width: 100%;
+    height: 80px;
     background: #181818;
-    transform: rotate(-90deg);
 }
-.header p{
+.header h1{
     position: absolute;
     width: 468.66px;
     height: 30.57px;
@@ -16,11 +14,91 @@
     font-weight: bold;
     font-size: 40px;
     line-height: 119.69%;
-    /* or 48px */
+
+    margin: 25px;
+    margin-left: 440px;
 
     display: flex;
     align-items: center;
     text-align: center;
 
     color: #F8F8F8;
+}
+.header .image{
+    position: absolute;
+    width: 52px;
+    height: 50px;
+    margin: 15px;
+}
+
+.toggle {
+    display: block;
+    background: white;
+    border: transparent;
+    border-radius: 50px;
+    cursor: pointer;
+
+    width: 52px;
+    height: 50px;
+    margin: 15px;
+    margin-left: 1250px;
+
+}
+.nameUser{
+    color: #999;
+} 
+.lineName{
+    position: absolute;
+    width: 200px;
+    height: 3.51px;
+    margin-top: -10px;
+
+    background: #545454;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 100px;
+} 
+.menu{
+    position: absolute;
+    color: #999;color: #999;
+    width: 200px;
+    padding: 10px;
+    margin: auto;
+    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+    text-align: center;
+    border-radius: 4px;
+    background: white;
+    box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+    margin-left: 1090px;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .4s;
+}
+.close{
+    background: transparent;
+    border: transparent;
+    color: #999;
+    margin-left: 80%;
+
+}
+.close:hover{
+    background: #1ABC9C;
+    color: #fff;
+}
+.menu ul, li, li a {
+  list-style: none;
+  display: block;
+  margin: 10;
+  padding: 0;
+}
+.menu li a {
+  padding: 5px;
+  color: #888;
+  text-decoration: none;
+  transition: all .2s;
+}
+.menu li a:hover,
+.menu li a:focus {
+  background: #1ABC9C;
+  color: #fff;
 }
