--- a/src/pages/Registration/index.css
+++ b/src/pages/Registration/index.css
@@ -1,69 +1,66 @@
-body{
-    background-color: #FFFFFF;
+.border-page-image {
+  position: fixed;
+  margin: -1px;
 }
-.border-page-image{
-    position: fixed;
-    margin: -1px;
+.create-account {
+  position: absolute;
+  display: flex;
+  margin: 110px;
+  margin-top: 190px;
+  left: 50%;
 }
-.create-account{
-    position: absolute;
-    display: flex;
-    margin: 110px;
-    margin-top: 190px;
-    left: 50%;
+.image-logo-create {
+  position: absolute;
+  width: 74.67px;
+  height: 73.69px;
+  margin: 105px;
+  margin-top: -40px;
 }
-.image-logo-create{
-    position: absolute;
-    width: 74.67px;
-    height: 73.69px;
-    margin: 105px;
-    margin-top: -40px;
-}
-.title-create{
-    position: absolute;
-    width: 288px;
-    height: 46px;
+.title-create {
+  position: absolute;
+  width: 288px;
+  height: 46px;
 
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 119.69%;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 119.69%;
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    color: #737373;
+  color: #737373;
 }
 .create-account form {
-	position: relative;
-    margin-top: 120px;
-    margin-left: -70px;
+  position: relative;
+  margin-top: 120px;
+  margin-left: -70px;
 }
 .create-account input {
-    display: flex;
-    background: #F8F8F8;
-    mix-blend-mode: darken;
-	appearance: none;
-	outline: 0;	
-	width: 400px;
-		
-	border-radius: 100px;
-    border: transparent;
-	padding: 10px 15px;
-	margin: 0 auto 18px auto;
+  display: flex;
+  background: #f8f8f8;
+  mix-blend-mode: darken;
+  appearance: none;
+  outline: 0;
+  width: 400px;
 
-	text-align: center;
-	font-weight: 300;
-	font-size: 18px;
-	color: black;	
+  border-radius: 100px;
+  border: transparent;
+  padding: 10px 15px;
+  margin: 0 auto 18px auto;
+
+  text-align: center;
+  font-weight: 300;
+  font-size: 18px;
+  color: black;
 }
-.btn-create{
-    margin-top: 40px;
-    margin-left: 30px;
+.btn-create {
+  margin-top: 40px;
+  margin-left: 30px;
 }
-@media only screen  and (max-width: 1560px){
-    .create-account{
-        margin: 150px;
-    }
+@media only screen and (max-width: 1560px) {
+  .create-account {
+    margin: 150px;
+  }
 }
