--- a/src/components/FooterPage/index.css
+++ b/src/components/FooterPage/index.css
@@ -1,78 +1,62 @@
-.footer
-{
-  background-color:#26272b;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
+.footer {
+  background-color: #26272b;
+  color: #737373;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
   margin-top: 600px;
 }
-.About{
-    margin: 45px;
-    margin-top: 10px;
-}
-.footer h6
-{
-  color:#fff;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
-}
-.footer a
-{
-  color:#737373;
-}
-.footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links
-{
-  padding-left:0;
-  list-style:none
-}
-.footer-links li
-{
-  display:block
-}
-.footer-links a
-{
-  color:#737373
-}
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links.inline li
-{
-  display:inline-block
-}
-.copyright{
+.footer .About {
   margin: 45px;
   margin-top: 10px;
 }
-.copyright-text
-{
-  margin:0
+.footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
-@media (max-width:991px)
-{
-  .footer [class^=col-]
-  {
-    margin-bottom:30px
+.footer a {
+  color: #737373;
+}
+.footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer .footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+.footer-links li {
+  display: block;
+}
+.footer-links a {
+  color: #737373;
+}
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links.inline li {
+  display: inline-block;
+}
+.copyright {
+  margin: 45px;
+  margin-top: 10px;
+}
+.copyright-text {
+  margin: 0;
+}
+@media only screen and (max-width: 1560px){
+  .footer{
+    width: 100.6%;
   }
 }
-@media (max-width:767px)
-{
-  .footer
-  {
-    padding-bottom:0
-  }
-  .footer .copyright-text,.footer .social-icons
-  {
-    text-align:center
+@media only screen and (max-width: 1360px){
+  .footer{
+    width: 100%;
   }
 }
