--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,43 +1,32 @@
 .header {
-  display: flex;
-  align-items: center;
+  position: absolute;
+  background: #181818;
   width: 100vw;
   height: 60px;
-  background: #181818;
+  bottom: 1;
+  left: 0;
+  margin-top: -8px;
 }
 .header h1 {
   position: absolute;
   font-style: normal;
   font-size: 2rem;
-  padding: 0px 500px;
+  
+  padding: 10px 0px 10px 40%;
+  flex-direction: row;
+  margin-top: -50px;
   color: #f8f8f8;
 }
 .header .image {
   width: 54px;
   height: 54px;
 
-  padding: 5px 0px 0px 25px;
-}
-.header .btn {
-  position: absolute;
-  background: white;
-  border: transparent;
-  border-radius: 50px;
-  cursor: pointer;
-
-  margin: 25px;
-  padding: 0px 0px 0px 4px;
-  right: 0;
-}
-.header .profile {
-  width: 52px;
-  height: 50px;
+  padding: 4px 0px 0px 25px;
 }
 .header .nameUser {
-  color: #999;
+  color: #888;
 }
 .header .lineName {
-  position: absolute;
   width: 200px;
   height: 3px;
   margin-top: -10px;
@@ -48,24 +37,21 @@
 }
 .header .menu {
   position: absolute;
-  color: #999;
+  background: white;
   width: 200px;
-
   text-align: center;
   border-radius: 4px;
-  background: white;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.05);
-  margin-left: 1090px;
-  margin-top: 180px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.8);
+  color: #888;
 
-  opacity: 0;
+  right: 0;
+  bottom: 1;
   visibility: hidden;
   transition: opacity 0.4s;
 }
 .header .menu ul,
 li,
 li a {
-  list-style: none;
   display: block;
   margin: 10;
   padding: 0;
@@ -81,13 +67,41 @@ li a {
   background: #1567e3;
   color: #fff;
 }
-.header .close {
+.header .sair{
   background: transparent;
   border: transparent;
-  color: #999;
-  margin-left: 80%;
+  text-align: center;
+  font-size: 1rem;
+  transition: all 0.2s;
+  width: 200px;
+  color: #888;
+  cursor: pointer; 
+}
+.header .sair:hover,
+.header .sair:focus {
+  background: #1567e3;
+  color: #fff;
+}
+.header .close {
+  display: flex;
+  background: transparent;
+  border: transparent;
+  border-radius: 0;
+  color: #888; 
+  cursor: pointer; 
+
+  right: 0;
+  bottom: 0;
+  padding: 0px 10px 0px 10px;
+
 }
 .header .close:hover {
   background: #1567e3;
   color: #fff;
+}
+@media only screen and (max-width: 1560px){
+
+}
+@media only screen and (max-width: 1360px){
+
 }
