--- a/src/pages/Initial/index.css
+++ b/src/pages/Initial/index.css
@@ -1,3 +1,7 @@
+.Initial {
+  width: 100%;
+  height: 100vh;
+}
 .navbar {
   position: relative;
   width: 80em;
@@ -8,7 +12,6 @@
   height: 200px;
 
   font-size: 120px;
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: bold;
   line-height: 120px;
@@ -23,8 +26,6 @@
   width: 600px;
   height: 92px;
   margin: 45px;
-
-  font-family: Roboto;
   font-style: normal;
   font-weight: 300;
   font-size: 35px;
@@ -40,16 +41,21 @@
   height: 41px;
 
   font-size: 25px;
-  font-family: 'Roboto';
 
   color: #000000;
   margin: 45px;
   margin-top: 30px;
 }
+.Initial button {
+  margin: 30px 0px 0px 40px;
+}
+.create button {
+  margin: 8px 0px 0px 55px;
+}
 /* Tamanho de tela padrão, deixar responsivo */
 .image-container {
   position: absolute;
-  margin-left: 41.7%;
+  margin-left: 41%;
   margin-top: -27.1rem;
 }
 .image {
@@ -62,12 +68,13 @@
   border-top-width: 0;
   border-right-width: 0;
   border-left-width: 0;
-  margin-top: 205px;
+  margin-top: 175px;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1560px) {
   .image-container {
-    margin-left: 40.9%;
+    margin-left: 40.3%;
     margin-top: -28.1rem;
   }
   .image {
@@ -75,33 +82,34 @@
     height: 800px;
   }
   .border-div {
-    margin-top: 72px;
+    margin-top: 40px;
+    width: 100.5%;
   }
   .Title {
-    font-size: 100px;
-  }
-  .Apresentation {
-    font-size: 30px;
-    width: 500px;
-  }
-}
-@media only screen and (max-width: 1360px) {
-  .image-container {
-    margin-left: 38.7%;
-    margin-top: -28.1rem;
-  }
-  .image {
-    width: 800px;
-    height: 800px;
-  }
-  .border-div {
-    margin-top: 72px;
-  }
-  .Title {
-    font-size: 95px;
+    font-size: 5.5rem;
   }
   .Apresentation {
     font-size: 30px;
     width: 490px;
+  }
+}
+@media only screen and (max-width: 1360px) {
+  .image-container {
+    margin-left: 38%;
+    margin-top: -28.1rem;
+  }
+  .image {
+    width: 800px;
+    height: 800px;
+  }
+  .border-div {
+    margin-top: 40px;
+  }
+  .Title {
+    font-size: 5.5rem;
+  }
+  .Apresentation {
+    font-size: 30px;
+    width: 480px;
   }
 }
