--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -1,8 +1,6 @@
 .login {
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -12,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 100px 0px 0px 0%;
 }
 
 .login .image-logo-login {
@@ -24,34 +23,34 @@
   font-weight: bold;
   font-size: 2.5rem;
   color: #737373;
+  margin-top: 12px;
 }
 
 .login .login-account form {
   display: flex;
+  margin: 0 auto;
   flex-direction: column;
   align-items: center;
+  padding: 20px 50px 0px 50px;
 }
 
 .login .login-account input {
   display: flex;
   background: #ebebeb;
   box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.15);
-  appearance: none;
-  outline: 0;
-  width: 400px;
 
   border-radius: 100px;
   border: none;
   padding: 10px 15px;
+  margin: 0 auto;
 
   text-align: center;
-  font-weight: 400;
   font-size: 1.2rem;
   color: #181818;
 }
 
 .login .login-account input::placeholder {
-  color: #C4C4C4;
+  color: #9b9999df;
 }
 
 .login .loading {
@@ -63,12 +62,12 @@
 }
 
 .login .error {
-  color: #FF5959;
+  color: #ff5959;
 }
 
 .login .border-page {
-  width: 100vw;
   position: absolute;
+  width: 100vw;
   bottom: 0;
   left: 0;
 }
