--- a/src/pages/Registration/index.css
+++ b/src/pages/Registration/index.css
@@ -1,48 +1,39 @@
+.create-account {
+  display: flex;
+  padding: 100px 0px 0px 25%;
+  flex-direction: column;
+  align-items: center;
+}
 .border-page-image {
   position: fixed;
-  margin: -1px;
+  margin: -10px;
 }
-.create-account {
-  position: absolute;
+.create-account .image-logo-create {
+  width: 74px;
+  height: 74px;
+}
+.create-account .title-create {
   display: flex;
-  margin: 110px;
-  margin-top: 190px;
-  left: 50%;
-}
-.image-logo-create {
-  position: absolute;
-  width: 74.67px;
-  height: 73.69px;
-  margin: 105px;
-  margin-top: -40px;
-}
-.title-create {
-  position: absolute;
   width: 288px;
   height: 46px;
 
-  font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 119.69%;
-
-  display: flex;
   align-items: center;
-
   color: #737373;
 }
 .create-account form {
-  position: relative;
-  margin-top: 120px;
-  margin-left: -70px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 50px 0px 50px;
 }
 .create-account input {
   display: flex;
   background: #f8f8f8;
-  mix-blend-mode: darken;
-  appearance: none;
-  outline: 0;
   width: 400px;
 
   border-radius: 100px;
@@ -55,12 +46,14 @@
   font-size: 18px;
   color: black;
 }
-.btn-create {
-  margin-top: 40px;
-  margin-left: 30px;
+.create-account .error {
+  color: #ff5959;
 }
+
 @media only screen and (max-width: 1560px) {
   .create-account {
     margin: 150px;
   }
+}
+@media only screen and (max-width: 1360px) {
 }
