--- a/src/pages/Registration/index.css
+++ b/src/pages/Registration/index.css
@@ -6,14 +6,14 @@
 }
 .border-page-image {
   position: fixed;
-  margin: -10px;
+  left: -75px;
+  top: 0;
 }
 .create-account .image-logo-create {
   width: 74px;
   height: 74px;
 }
 .create-account .title-create {
-  display: flex;
   width: 288px;
   height: 46px;
 
@@ -32,7 +32,6 @@
   padding: 10px 50px 0px 50px;
 }
 .create-account input {
-  display: flex;
   background: #f8f8f8;
   width: 400px;
 
