--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,20 @@
 
 * {
   font-family: 'Roboto', sans-serif;
+  outline: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body{
   background-color: #FFFFFF;
+  overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 body::-webkit-scrollbar {
-  width: 12px;
+  width: 10px;
 }
 
 body::-webkit-scrollbar-track {
