--- a/src/components/FooterPage/index.css
+++ b/src/components/FooterPage/index.css
@@ -1,62 +1,30 @@
 .footer {
-  background-color: #26272b;
+  background-color: #181818;
   color: #737373;
-  padding: 45px 0 20px;
-  font-size: 15px;
-  line-height: 24px;
-  margin-top: 600px;
+  padding: 45px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
-.footer .About {
-  margin: 45px;
-  margin-top: 10px;
-}
-.footer h6 {
-  color: #fff;
-  font-size: 16px;
+
+.footer .about h6 {
+  color: whitesmoke;
+  font-size: 1.3rem;
   text-transform: uppercase;
-  margin-top: 5px;
   letter-spacing: 2px;
 }
+
 .footer a {
-  color: #737373;
+  color: rgba(61, 61, 61, 0.659);
+  transition: all 300ms;
+  text-decoration: none;
 }
+
 .footer a:hover {
   color: #3366cc;
-  text-decoration: none;
 }
-.footer .footer-links {
-  padding-left: 0;
-  list-style: none;
-}
-.footer-links li {
-  display: block;
-}
-.footer-links a {
-  color: #737373;
-}
-.footer-links a:active,
-.footer-links a:focus,
-.footer-links a:hover {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links.inline li {
-  display: inline-block;
-}
-.copyright {
-  margin: 45px;
-  margin-top: 10px;
-}
-.copyright-text {
-  margin: 0;
-}
-@media only screen and (max-width: 1560px){
-  .footer{
-    width: 100.6%;
-  }
-}
-@media only screen and (max-width: 1360px){
-  .footer{
-    width: 100%;
-  }
+
+.footer .copyright {
+  font-size: 0.8rem;
+  margin-top: 35px;
 }
