--- a/src/pages/Initial/index.css
+++ b/src/pages/Initial/index.css
@@ -6,7 +6,6 @@
 .Initial section {
   width: 100vw;
   height: 100vh;
-  box-shadow: 0 0 5px 5px #18181831;
 }
 
 .Initial .presentation {
@@ -40,4 +39,8 @@
 
 .Initial .presentation img {
   height: 100vh;
+}
+
+.Initial .presentation button {
+  margin-bottom: 10px;
 }
