--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -42,7 +42,7 @@
   border-radius: 100px;
   border: none;
   padding: 10px 15px;
-  margin: 0 auto;
+  margin: 10px auto;
 
   text-align: center;
   font-size: 1.2rem;
@@ -57,8 +57,8 @@
   margin-bottom: 10px;
 }
 
-.login .login-account button {
-  margin-bottom: 10px;
+.login .login-account .btn-login {
+  margin: 25px 0;
 }
 
 .login .error {
