--- a/src/components/ImageProfile/index.css
+++ b/src/components/ImageProfile/index.css
@@ -1,6 +1,6 @@
-.header .profile {
-    display: flex;
-    border-radius: 50px;
-    width: 50px;
-    height: 50px;
+.profile {
+  border-radius: 50%;
+  border: 3px solid whitesmoke;
+  width: 50px;
+  height: 50px;
 }
