--- a/src/pages/MyHome/index.css
+++ b/src/pages/MyHome/index.css
@@ -1,6 +1,13 @@
-@media only screen and (max-width: 1560px){
-
+.my-home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-@media only screen and (max-width: 1360px){
+.my-home .palettes {
+  margin-top: 96px;
+}
 
+.my-home .loading {
+  width: 100px;
+  margin-top: 116px;
 }
