--- a/src/components/PalettePreview/index.css
+++ b/src/components/PalettePreview/index.css
@@ -3,34 +3,10 @@
   flex-direction: column;
 }
 
-.palette-preview h3 {
+.palette-preview a {
   font-weight: 300;
   color: #737373;
   margin-bottom: 28px;
-}
-
-.palette-preview .colors {
-  display: flex;
-  margin-bottom: 32px;
-}
-
-.palette-preview .colors .color {
-  width: 108px;
-  height: 108px;
-  margin: 0 8px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: transform 200ms;
-}
-
-.palette-preview .colors .color:hover {
-  transform: scale(1.05);
-}
-
-.palette-preview .colors .color:first-of-type {
-  margin-left: 0;
-}
-
-.palette-preview .colors .color:last-of-type {
-  margin-right: 0;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
