--- a/src/components/ColorsGallery/index.css
+++ b/src/components/ColorsGallery/index.css
@@ -8,7 +8,6 @@
   width: 108px;
   height: 108px;
   margin: 0 8px;
-  border-radius: 5px;
   cursor: pointer;
   transition: transform 200ms;
 }
@@ -18,9 +17,9 @@
 }
 
 .colors .color:first-of-type {
-  margin-left: 0;
+  margin-left: 5px;
 }
 
 .colors .color:last-of-type {
-  margin-right: 0;
+  margin-right: 5px;
 }
