--- a/src/components/AddButton/index.css
+++ b/src/components/AddButton/index.css
@@ -4,6 +4,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 1.7rem;
+  cursor: pointer;
+  transition: transform 200ms;
+}
+
+.circle {
   border-radius: 50%;
   background-color: #F1E72A;
   border: none;
@@ -12,9 +18,22 @@
   bottom: 0;
   right: 0;
   margin: 35px;
-  font-size: 1.7rem;
   color: whitesmoke;
-  cursor: pointer;
+}
+
+.square {
+  width: 98px;
+  height: 98px;
+  color: #c4c4c4;
+  background: #f6f6f6;
+  border: none;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23C4C4C4FF' stroke-width='6' stroke-dasharray='16' stroke-dashoffset='5' stroke-linecap='square'/%3e%3c/svg%3e");
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.25);
+  margin-left: 5px;
+}
+
+.add-btn:hover {
+  transform: scale(1.05);
 }
 
 .add-btn svg {
