--- a/src/components/OverlayContainer/index.css
+++ b/src/components/OverlayContainer/index.css
@@ -1,7 +1,7 @@
 .overlay {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   z-index: 10000;
   background: rgba(0, 0, 0, 0.25);
   display: flex;
@@ -29,7 +29,7 @@
   position: relative;
 }
 
-.overlay .container button {
+.overlay .container .close {
   font-size: 1.5rem;
   color: #c4c4c4;
   background: none;
@@ -45,7 +45,7 @@
   transition: transform 200ms, color 200ms;
 }
 
-.overlay .container button:hover {
+.overlay .container .close:hover {
   color: #ff5959;
   transform: scale(1.1);
 }
