--- a/src/components/OverlayContainer/index.css
+++ b/src/components/OverlayContainer/index.css
@@ -2,6 +2,8 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 10000;
   background: rgba(0, 0, 0, 0.25);
   display: flex;
