--- a/src/components/AddColor/index.css
+++ b/src/components/AddColor/index.css
@@ -1,3 +1,9 @@
+.add-color {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .add-color .color-picker {
   border: 0;
   width: 98px;
