cria componente EditPalette

--- a/src/components/ColorsGallery/index.css
+++ b/src/components/ColorsGallery/index.css
@@ -2,12 +2,13 @@
 .colors {
   display: flex;
   margin-bottom: 32px;
+  flex-wrap: wrap;
 }
 
 .colors .color {
   width: 98px;
   height: 98px;
-  margin: 0 8px;
+  margin: 5px 0  5px 10px;
   cursor: pointer;
   transition: transform 200ms;
 }
@@ -17,9 +18,9 @@
 }
 
 .colors .color:first-of-type {
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .colors .color:last-of-type {
-  margin-right: 5px;
+  margin-right: 10px;
 }
