--- a/src/components/AddButton/index.css
+++ b/src/components/AddButton/index.css
@@ -29,7 +29,7 @@
   border: none;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23C4C4C4FF' stroke-width='6' stroke-dasharray='16' stroke-dashoffset='5' stroke-linecap='square'/%3e%3c/svg%3e");
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.25);
-  margin: 5px 0;
+  margin: 5px 10px;
 }
 
 .add-btn:hover {
