implementa pesquisa de usuarios

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,12 +1,16 @@
-.header {
+.header-main {
   position: fixed;
-  background: #181818;
   width: 100vw;
   display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
   align-items: center;
+  background: #181818;
   justify-content: space-between;
   padding: 10px 20px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.24);
 }
 
 .header img {
