--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -24,6 +24,43 @@
   color: #f8f8f8;
 }
 
+.header .navigate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header .navigate a {
+  font-size: 1.2rem;
+  margin-left: 8px;
+  text-decoration: none;
+  color: whitesmoke;
+  transition: all 200ms;
+}
+
+.header .navigate a:hover {
+  color: #1567e3;
+}
+
+.header .navigate .btn-register {
+  background-color: #1567e3;
+  border-radius: 17px;
+  padding: 5px 10px;
+}
+
+.header .navigate .btn-register:hover {
+  color: whitesmoke;
+  transform: scale(1.1);
+}
+
+.header .navigate .btn-register:active {
+  color: #1567e3;
+  background-color: whitesmoke;
+  border: 1px solid #1567e3;
+  transform: scale(1);
+  font-weight: 600;
+}
+
 .header .image {
   width: 54px;
   height: 54px;
